--- a/Simple Contact App/Base.lproj/Main.storyboard
+++ b/Simple Contact App/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="cxM-Ab-c16">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
@@ -17,7 +17,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="Wf8-EI-7PG">
-                                <rect key="frame" x="0.0" y="59" width="393" height="759"/>
+                                <rect key="frame" x="0.0" y="103" width="393" height="715"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" id="4FZ-4o-lAw">
@@ -46,6 +46,86 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1874.0458015267175" y="3.5211267605633805"/>
+        </scene>
+        <!--CellUI View Controller-->
+        <scene sceneID="1cf-AB-JQq">
+            <objects>
+                <viewController storyboardIdentifier="CellUIViewController" id="fG8-d3-2HK" customClass="CellUIViewController" customModule="Simple_Contact_App" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="LqF-rl-93S">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="SWc-UJ-QXb">
+                                <rect key="frame" x="63" y="79" width="267" height="128"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="128" id="xM4-G6-af6"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GcQ-bb-Qtj">
+                                <rect key="frame" x="0.0" y="227" width="393" height="36"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bOw-IQ-s6G">
+                                <rect key="frame" x="0.0" y="283" width="393" height="27.666666666666686"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="23"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Tvf-oL-hZ8">
+                                <rect key="frame" x="0.0" y="330.66666666666669" width="393" height="35"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Delete"/>
+                                <connections>
+                                    <action selector="Delete:" destination="fG8-d3-2HK" eventType="touchUpInside" id="pJO-J6-Y2y"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="J19-wo-QNZ"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="Tvf-oL-hZ8" firstAttribute="top" secondItem="bOw-IQ-s6G" secondAttribute="bottom" constant="20" id="1jS-ob-vn1"/>
+                            <constraint firstItem="J19-wo-QNZ" firstAttribute="trailing" secondItem="Tvf-oL-hZ8" secondAttribute="trailing" id="9aX-OR-uqq"/>
+                            <constraint firstItem="GcQ-bb-Qtj" firstAttribute="leading" secondItem="J19-wo-QNZ" secondAttribute="leading" id="9q9-0h-aOY"/>
+                            <constraint firstItem="SWc-UJ-QXb" firstAttribute="top" secondItem="J19-wo-QNZ" secondAttribute="top" constant="20" id="Rle-kn-9kB"/>
+                            <constraint firstItem="J19-wo-QNZ" firstAttribute="trailing" secondItem="GcQ-bb-Qtj" secondAttribute="trailing" id="XRF-V7-37a"/>
+                            <constraint firstItem="bOw-IQ-s6G" firstAttribute="top" secondItem="GcQ-bb-Qtj" secondAttribute="bottom" constant="20" id="oLR-q7-OTj"/>
+                            <constraint firstItem="SWc-UJ-QXb" firstAttribute="centerX" secondItem="LqF-rl-93S" secondAttribute="centerX" id="pql-Ay-aqo"/>
+                            <constraint firstItem="GcQ-bb-Qtj" firstAttribute="top" secondItem="SWc-UJ-QXb" secondAttribute="bottom" constant="20" id="rJ0-f4-6wa"/>
+                            <constraint firstItem="SWc-UJ-QXb" firstAttribute="leading" secondItem="J19-wo-QNZ" secondAttribute="leading" constant="63" id="tXQ-mM-BW4"/>
+                            <constraint firstItem="J19-wo-QNZ" firstAttribute="trailing" secondItem="bOw-IQ-s6G" secondAttribute="trailing" id="tgc-h3-fPK"/>
+                            <constraint firstItem="Tvf-oL-hZ8" firstAttribute="leading" secondItem="J19-wo-QNZ" secondAttribute="leading" id="xkk-eK-6sD"/>
+                            <constraint firstItem="bOw-IQ-s6G" firstAttribute="leading" secondItem="J19-wo-QNZ" secondAttribute="leading" id="yrt-fN-kY9"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="Avatar" destination="SWc-UJ-QXb" id="0cF-RS-cvg"/>
+                        <outlet property="FullName" destination="GcQ-bb-Qtj" id="8y4-aB-nxH"/>
+                        <outlet property="Phone" destination="bOw-IQ-s6G" id="lu6-f7-Bsl"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="rgr-e1-7Bd" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2759.5419847328244" y="3.5211267605633805"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="gxi-H8-ddy">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="cxM-Ab-c16" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="6MV-P5-cOf">
+                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="F6u-b3-46N"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="GeL-wt-GpU" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="947.32824427480909" y="3.5211267605633805"/>
         </scene>
